dist_man1_MANS=

if BUILD_MALLIORD
  dist_man1_MANS+=malliord.1
endif

if ENABLE_QT
  dist_man1_MANS+=mallior-qt.1
endif

if BUILD_MALLIOR_CLI
  dist_man1_MANS+=mallior-cli.1
endif

if BUILD_MALLIOR_TX
  dist_man1_MANS+=mallior-tx.1
endif

if BUILD_MALLIOR_UTIL
  dist_man1_MANS+=mallior-util.1
endif

if ENABLE_WALLET
if BUILD_MALLIOR_WALLET
  dist_man1_MANS+=mallior-wallet.1
endif
endif
